Update html and css
Finished styles for desktop and mobile view, minor
fixes to html

--- a/index.html
+++ b/index.html
@@ -28,9 +28,12 @@
   <body>
     <main>
       <header class="header">
-        <h1>Reliable, efficient delivery</h1>
-        <span>Powered by Technology</span>
-        <p>
+        <h1 class="sr-only">AI Tool description</h1>
+        <p class="intro">
+          Reliable, efficient delivery
+          <span>Powered by Technology</span>
+        </p>
+        <p class="description">
           Our Artificial Intelligence powered tools use millions of project data
           points to ensure that your project is successful
         </p>
@@ -42,18 +45,21 @@
           <p>Monitors activity to identify project roadblocks</p>
           <img src="images/icon-supervisor.svg" alt="magnifier icon" />
         </article>
-        <article class="team-builder">
-          <h2>Team Builder</h2>
-          <p>
-            Scans our talent network to create the optimal team for your project
-          </p>
-          <img src="images/icon-team-builder.svg" alt="house icon" />
-        </article>
-        <article class="Karma">
-          <h2>Karma</h2>
-          <p>Regularly evaluates our talent to ensure quality</p>
-          <img src="images/icon-karma.svg" alt="lightbulb icon" />
-        </article>
+        <div class="wrapper">
+          <article class="team-builder">
+            <h2>Team Builder</h2>
+            <p>
+              Scans our talent network to create the optimal team for your
+              project
+            </p>
+            <img src="images/icon-team-builder.svg" alt="house icon" />
+          </article>
+          <article class="karma">
+            <h2>Karma</h2>
+            <p>Regularly evaluates our talent to ensure quality</p>
+            <img src="images/icon-karma.svg" alt="lightbulb icon" />
+          </article>
+        </div>
         <article class="calculator">
           <h2>Calculator</h2>
           <p>
