Fix html heading accessibility issues

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <body>
     <main>
       <header class="header">
-        <h1 class="sr-only">AI Tool description</h1>
+        <h1 aria-label="AI Tool description"></h1>
         <p class="intro">
           Reliable, efficient delivery
           <span>Powered by Technology</span>
